# high-assurance-legacy

./: .gitignore  CONTRIBUTING.md  NOTES-2017-03-03.md  Ouroboros.hs  Ouroboros1.hs  README.md
AbstractDeltaQ/: .gitignore  AbstractDeltaQ.cabal  ChangeLog.md  references.bib
AbstractDeltaQ/src/: AbstractDeltaQ.lhs  Util.hs
AbstractIntPsi/: AbstractIntPsi.cabal  AbstractIntPsi.hs
AbstractPsi/: AbstractPsi.cabal
AbstractPsi/src/: DeltaQ.hs  DeltaQM.hs  Distribution.hs  Examples.hs  Graph.hs  Initial.hs  MonadDeltaQ.hs  Psi.hs  Time.hs
Chi_Calculus/: Basic_Transition_System.thy  Bisimulation.thy  GNUmakefile  Processes.thy  Proper_Transition_System.thy  ROOT  Transition_System.thy  Transition_Systems.thy
Exploration/AbstractIntPsi/: .gitignore  AbstractIntPsi.hs  LICENSE
Exploration/Asynchronous ψ-calculus/: async-psi.tex  references.bib
Exploration/Ouroboros Praos in the ψ-calculus/: Praos.lhs
Exploration/Psi/: Psi.cabal  shell.nix
Exploration/Psi/src/: Examples.hs  WeightedChoice.hs
Exploration/Psi/src/Psi/: DeltaQ.hs  IO.hs
Exploration/praos/: .gitignore  praos.cabal  stack.yaml
Exploration/semantics/: Makefile
Exploration/simulation/: simulation.cabal
Exploration/ΔQ abstract interpretation/: LICENSE  Makefile
Haskell/: .gitignore  .stylish-haskell.yaml  Makefile  README.md  cabal.project  shell.nix  stack.yaml
Haskell/chi-calculus/: chi-calculus.cabal
Haskell/chi-calculus-examples/: chi-calculus-examples.cabal
Haskell/chi-calculus-examples/src/Ouroboros/ChiCalculus/Examples/: DiningPhilosophers.hs  Reverser.hs
Haskell/chi-calculus-examples/src/Ouroboros/Chi_Calculus/: Examples.hs
Haskell/chi-calculus-examples/src/Ouroboros/Chi_Calculus/Examples/: Reverser.hs
Haskell/chi-calculus-examples/src/exe/: DiningPhilosophers.hs  Reverser.hs
Haskell/chi-calculus-examples/src/lib/Ouroboros/ChiCalculus/Examples/: DiningPhilosophers.hs  Reverser.hs
Haskell/chi-calculus/src/Ouroboros/: Chi_Calculus.hs
Haskell/chi-calculus/src/Ouroboros/ChiCalculus/: Data.hs  Process.hs
Haskell/chi-calculus/src/Ouroboros/ChiCalculus/Process/: Expr.hs  Run.hs
Haskell/chi-calculus/src/Ouroboros/Chi_Calculus/: Data.hs  DeltaQ.hs  Environment.hs  Interpretation.hs  Process.hs
Haskell/chi-calculus/src/Ouroboros/Chi_Calculus/Interpretation/: Exec.hs
Haskell/chi-calculus/src/Ouroboros/Chi_Calculus/Process/: DeltaQ.hs  Exec.hs  Expr.hs  Run.hs
Haskell/chi-calculus/src/Ouroboros/Chi_Calculus/Process/DeltaQ/: DeltaQ.hs  HList.hs
Haskell/deltaQ/: deltaQ.cabal
Haskell/deltaQ/graph/: Main.hs
Haskell/deltaQ/src/: Charts.hs  Examples.hs  Graph.hs  Process.hs  SimpleTest.hs
Haskell/deltaQ/src/Data/: DeltaQ.hs
Haskell/deltaQ/src/Data/DeltaQ/: Core.hs  Discrete.hs  IntP.hs  IntPP.hs  Mixed.hs  Monad.hs  PList.hs  Probability.hs  Queue.hs
Haskell/fixed-length-lists/: LICENSE  fixed-length-lists.cabal
Haskell/fixed-length-lists/src/Data/List/: FixedLength.hs
Haskell/fixed-length-lists/src/Data/Type/: Natural.hs
Haskell/hlists/: hlists.cabal
Haskell/hlists/src/Data/: HList.hs
Haskell/polynomials/: polynomials.cabal
Haskell/polynomials/src/Data/: Alg.hs  CMonoid.hs  Free.hs  Mod.hs  Piecewise.hs  Pol.hs  Polynomial.hs  RModule.hs
Haskell/polynomials/src/Data/Piecewise/: Charts.hs  Test.hs
Haskell/polynomials/src/Data/Polynomial/: Charts.hs  Class.hs  Discrete.hs  Mixed.hs  Piecewise.hs
Haskell/polynomials/src/Data/Polynomial/Piecewise/: Charts.hs  Test.hs
Isabelle/: GNUmakefile  Makefile  README.md  ROOTS  Thorn_Calculus_Experiments.thy
Isabelle/Chi_Calculus/: Basic_Transition_System.thy  Basic_Weak_Bisimulation.thy  Basic_Weak_Transition_System.thy  Channels.thy  Communication.thy  Core_Bisimilarities.thy  Natural_Transition_Systems.thy  Processes.thy  Proper_Transition_System.thy  Proper_Weak_Bisimulation.thy  Proper_Weak_Transition_System.thy  ROOT  Relaying.thy  Std_Basic_Weak_Transition_System.thy  Superficial_Basic_Transition_System.thy  Typed_Basic_Transition_System.thy  Typed_Channels.thy  Typed_Processes.thy  Typed_Proper_Transition_System.thy  binder_preservation.ML
Isabelle/Chi_Calculus_Examples/: Broadcaster.thy  Broadcaster_Equivalences.thy  Broadcaster_Examples.thy  Communication.thy  Communication_Medium.thy  Diamond.thy  Filtering_On_Receipt_Forwarding_Broadcasting_Equivalence.thy  Forwarding_Broadcasting_Equivalence.thy  Network_Equivalences-Forwarding_Broadcasting.thy  Network_Equivalences-Relaying_Broadcasting.thy  Network_Equivalences.thy  ROOT  Relaying.thy  Relaying_Broadcasting_Equivalence.thy  Square_Numbers_Server.thy  Synchronous_Communication.thy  Utilities.thy
Isabelle/Ouroboros/: Finite_Map_Extras.thy  Ouroboros_BFT_Forwarding_Broadcasting_Equivalence.thy  Ouroboros_BFT_Implementation.thy  Ouroboros_Praos_Forwarding_Broadcasting_Equivalence.thy  Ouroboros_Praos_Implementation.thy  ROOT
Isabelle/Ouroboros_Examples/: Chain_Selection_Property.thy  ROOT
Isabelle/Relation_Methods/: Equivalence.thy  Monotonicity.thy  ROOT
Isabelle/Thorn_Calculus/: ROOT  Thorn_Calculus-Actions.thy  Thorn_Calculus-Communication.thy  Thorn_Calculus-Core_Bisimilarities.thy  Thorn_Calculus-Experiments.thy  Thorn_Calculus-Foundations.thy  Thorn_Calculus-Processes.thy  (+2 more)
Psi/: Psi.cabal
Psi/src/: DeltaQ.hs  DeltaQM.hs  DeltaQT.hs  Distribution.hs  Examples.hs  MonadDeltaQ.hs  Probability.hs  Psi.hs  WeightedChoice.hs
Psi/src/Psi/: Core.hs  DeltaQ.hs  Examples.hs  IO.hs
async-psi/: Makefile  async-psi.tex  references.bib
csp/: pool.csp
praos/: ChangeLog.md  Makefile  Praos.lhs  praos.cabal  references.bib  shell.nix  stack.yaml
semantics/: OuroborosSpec.tex  references.bib
simulation/: shell.nix  simulation.cabal  stack.yaml
simulation/src/: DeltaQ.hs  Examples.hs  Simulation.hs
simulation/src/DeltaQ/: Chart.hs  Core.hs
simulation/src/Examples/: GlobalRetry.hs  HopByHop.hs  PingPong.hs  Ring.hs  Ticker.hs  Timeout.hs
simulation/src/Simulation/: Channel.hs  HMap.hs  Observable.hs  Pure.hs  SimBase.hs  Simple.hs  Thread.hs  ThreadId.hs  Time.hs  TimeQueue.hs  Utils.hs
simulation/src/Simulation/Thread/: Class.hs
(+53 files in other folders)
