name:                AbstractDeltaQ
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Edsko de Vries
maintainer:          edsko@well-typed.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     AbstractDeltaQ
  other-modules:       Util
  build-depends:       base >=4.9 && <4.11
                     , generics-sop
                     , mtl
                     , pretty-show
                     , stm
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -pgmL lhs2TeX -optL--pre
