name:                AbstractPsi
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Lars Bruenjes
maintainer:          lars.bruenjes@iohk.io
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DeltaQM
                     , Examples
                     , Graph
                     , Initial
                     , Psi
                     , Time
  build-depends:       base >=4.7 && <5
                     , containers
                     , fgl
                     , graphviz
                     , mtl
                     , random
  default-language:    Haskell2010
  ghc-options:         -Wall
  default-extensions:  DeriveFunctor
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , RankNTypes
                     , ScopedTypeVariables
                     , TypeFamilies
