name:                Psi
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Lars Bruenjes
maintainer:          lars.bruenjes@iohk.io
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     WeightedChoice
                     , DeltaQ
                     , DeltaQM
                     , Distribution
                     , MonadDeltaQ
                     , Probability
                     , Psi
                     , Time
  build-depends:       base >=4.7 && <5
                     , containers
                     , free
                     , mtl
                     , random
                     , semigroups
  default-language:    Haskell2010
  ghc-options:         -Wall
  default-extensions:  DeriveFunctor
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , MultiParamTypeClasses
                     , RankNTypes
                     , ScopedTypeVariables
                     , TypeFamilies
