name:                Psi
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Lars Bruenjes
maintainer:          lars.bruenjes@iohk.io
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     WeightedChoice
                     , DeltaQM
                     , DeltaQT
                     , Distribution
                     , Examples
                     , MonadDeltaQ
                     , Probability
                     , Psi.Core
                     , Psi.DeltaQ
                     , Psi.Examples
                     , Psi.IO
  build-depends:       base >=4.7 && <5
                     , Chart
                     , Chart-cairo
                     , containers
                     , free
                     , MonadRandom
                     , mtl
                     , random
                     , semigroups
                     , transformers
  default-language:    Haskell2010
  ghc-options:         -Wall
  default-extensions:  BangPatterns
                     , DataKinds
                     , DeriveFunctor
                     , EmptyCase
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , MultiParamTypeClasses
                     , RankNTypes
                     , ScopedTypeVariables
                     , TypeFamilies
                     , TypeOperators
