cabal-version: 2.2
name:          chi-calculus-examples
version:       0.0.0.0
build-type:    Simple
license:       MIT
license-file:  LICENSE
copyright:     © 2018 IOHK
author:        Wolfgang Jeltsch
maintainer:    wolfgang@well-typed.com
stability:     provisional
homepage:      https://github.com/input-output-hk/fm-ouroboros/Haskell/chi-calculus-examples
bug-reports:   https://github.com/input-output-hk/fm-ouroboros/issues
synopsis:      χ-calculus examples
description:   The χ-calculus is a process calculus that is used in the
               high-assurance implementation of the Ouroboros Genesis protocol.
               This package contains examples of χ-calculus programs.
category:      Concurrency
tested-with:   GHC == 8.6.2

source-repository head

    type:     git
    location: https://github.com/input-output-hk/fm-ouroboros.git
    branch:   master
    subdir:   Haskell/chi-calculus-examples

library

    exposed-modules: Ouroboros.ChiCalculus.Examples.DiningPhilosophers
                     Ouroboros.ChiCalculus.Examples.Reverser

    build-depends: base          >= 4.10 && < 5,
                   chi-calculus ^>= 0.0

    hs-source-dirs: src/lib

    default-language: Haskell2010

    other-extensions: FlexibleInstances
                      GADTs
                      OverloadedStrings
                      RankNTypes
                      ScopedTypeVariables
                      ViewPatterns

    ghc-options: -Wall

executable Reverser

    main-is: Reverser.hs

    build-depends: base                   >= 4.10 && < 5,
                   chi-calculus-examples ^>= 0.0

    hs-source-dirs: src/exe

    default-language: Haskell2010

    ghc-options: -Wall

executable DiningPhilosophers

    main-is: DiningPhilosophers.hs

    build-depends: base                   >= 4.10 && < 5,
                   chi-calculus-examples ^>= 0.0

    hs-source-dirs: src/exe

    default-language: Haskell2010

    ghc-options: -Wall
