Name:          chi-calculus
Version:       0.0.0.0
Cabal-Version: >= 2.0
Build-Type:    Simple
License:       MIT
License-File:  LICENSE
Copyright:     © 2018 IOHK
Author:        Wolfgang Jeltsch
Maintainer:    wolfgang@well-typed.com
Stability:     provisional
Homepage:      https://github.com/input-output-hk/ouroboros-spec/Haskell/chi-calculus
Bug-Reports:   https://github.com/input-output-hk/ouroboros-spec/issues
Synopsis:      The χ-calculus
Description:   The χ-calculus is a process calculus that is used in the
               high-assurance implementation of the Ouroboros Genesis protocol.
               This package defines the language of the χ-calculus and some
               basic interpretations.
Category:      Concurrency
Tested-With:   GHC == 8.4.2

Source-Repository head

    Type:     git
    Location: https://github.com/input-output-hk/ouroboros-spec.git
    Branch:   master
    Subdir:   Haskell/chi-calculus

Library

    Exposed-Modules: Ouroboros.Chi_Calculus.Data
                     Ouroboros.Chi_Calculus.Process
                     Ouroboros.Chi_Calculus.Process.Expr
                     Ouroboros.Chi_Calculus.Process.Run

    Build-Depends: base                >= 4.10 && < 5,
                   fixed-length-lists ^>= 0.0,
                   text               ^>= 1.2,
                   transformers       ^>= 0.5

    HS-Source-Dirs: src

    Default-Language: Haskell2010

    Other-Extensions: GADTs
                      KindSignatures
                      OverloadedStrings
                      PartialTypeSignatures
                      RankNTypes
                      TypeApplications
                      TypeFamilies

    GHC-Options: -Wall -Wno-partial-type-signatures
