cabal-version: 2.2
name:          chi-calculus
version:       0.0.0.0
build-type:    Simple
license:       MIT
license-file:  LICENSE
copyright:     © 2018 IOHK
author:        Wolfgang Jeltsch
maintainer:    wolfgang@well-typed.com
stability:     provisional
homepage:      https://github.com/input-output-hk/fm-ouroboros/Haskell/chi-calculus
bug-reports:   https://github.com/input-output-hk/fm-ouroboros/issues
synopsis:      The χ-calculus
description:   The χ-calculus is a process calculus that is used in the
               high-assurance implementation of the Ouroboros Genesis protocol.
               This package defines the language of the χ-calculus and some
               basic interpretations.
category:      Concurrency
tested-with:   GHC == 8.6.2

source-repository head

    type:     git
    location: https://github.com/input-output-hk/fm-ouroboros.git
    branch:   master
    subdir:   Haskell/chi-calculus

library

    exposed-modules: Ouroboros.ChiCalculus.Data
                     Ouroboros.ChiCalculus.Process
                     Ouroboros.ChiCalculus.Process.Expr
                     Ouroboros.ChiCalculus.Process.Run

    build-depends: base                >= 4.10 && < 5,
                   fixed-length-lists ^>= 0.0,
                   text               ^>= 1.2,
                   transformers       ^>= 0.5

    hs-source-dirs: src

    default-language: Haskell2010

    other-extensions: GADTs
                      KindSignatures
                      OverloadedStrings
                      PartialTypeSignatures
                      RankNTypes
                      TypeApplications
                      TypeFamilies

    ghc-options: -Wall -Wno-partial-type-signatures
