Name:          deltaQ
Version:       0.0.0.0
Cabal-Version: >= 2.0
Build-Type:    Simple
License:       MIT
License-File:  LICENSE
Copyright:     © 2018 IOHK
Author:        Lars Bruenjes
Maintainer:    lars.bruenjes@iohk.io
Stability:     provisional
Homepage:      https://github.com/input-output-hk/ouroboros-spec/Haskell/deltaQ
Bug-Reports:   https://github.com/input-output-hk/ouroboros-spec/issues
Synopsis:      DeltaQ
Description:   DeltaQ.
Category:      Concurrency
Tested-With:   GHC == 8.4.3

Source-Repository head

    Type:     git
    Location: https://github.com/input-output-hk/ouroboros-spec.git
    Branch:   master
    Subdir:   Haskell/deltaQ

Library

    Exposed-Modules:   Data.DeltaQ
                     , Data.DeltaQ.Core
                     , Data.DeltaQ.Mixed
                     , Data.DeltaQ.PList
                     , Data.DeltaQ.Probability
                     , Data.DeltaQ.Queue
                     , Graph
                     , Process
                     , SimpleTest

    Build-Depends: base                >= 4.10 && < 5,
                   containers         ^>= 0.5,
                   lens               ^>= 4.16,
                   MonadRandom        ^>= 0.5,
                   mtl                ^>= 2.2,
                   operational        ^>= 0.2,
                   polynomials,
                   semigroups         ^>= 0.18,
                   transformers       ^>= 0.5

    HS-Source-Dirs: src

    Default-Language: Haskell2010

    GHC-Options: -Wall

executable graph

  hs-source-dirs:      graph
  main-is:             Main.hs
  build-depends:       base        >= 4.7 && < 5,
                       containers ^>= 0.5,
                       deltaQ,
                       polynomials
  ghc-options:         -Wall -O3
  default-language:    Haskell2010
