cabal-version: 2.2
name:          fixed-length-lists
version:       0.0.0.0
build-type:    Simple
license:       MIT
license-file:  LICENSE
copyright:     © 2018 IOHK
author:        Wolfgang Jeltsch
maintainer:    wolfgang@well-typed.com
stability:     provisional
homepage:      https://github.com/input-output-hk/fm-ouroboros/Haskell/fixed-length-lists
bug-reports:   https://github.com/input-output-hk/fm-ouroboros/issues
synopsis:      Lists whose lengths are fixed via a type parameter
description:   This package defines a type of lists that has an additional type
               parameter specifying list lengths. Such a type is often
               misleadingly called @Vec@.
category:      Data
tested-with:   GHC == 8.6.2

source-repository head

    type:     git
    location: https://github.com/input-output-hk/fm-ouroboros.git
    branch:   master
    subdir:   Haskell/fixed-length-lists

library

    exposed-modules: Data.List.FixedLength
                     Data.Type.Natural

    build-depends: base >= 4.10 && < 5

    hs-source-dirs: src

    default-language: Haskell2010

    default-extensions: NoStarIsType

    other-extensions: DataKinds
                      RankNTypes
                      TypeFamilies

    ghc-options: -Wall
