Name:          polynomials
Version:       0.0.0.0
Cabal-Version: >= 2.0
Build-Type:    Simple
License:       MIT
License-File:  LICENSE
Copyright:     © 2018 IOHK
Author:        Lars Bruenjes
Maintainer:    lars.bruenjes@iohk.io
Stability:     provisional
Homepage:      https://github.com/input-output-hk/ouroboros-spec/Haskell/polynomials
Bug-Reports:   https://github.com/input-output-hk/ouroboros-spec/issues
Synopsis:      Polynomials
Description:   Polynomials.
Category:      Data Structures
Tested-With:   GHC == 8.4.3

Source-Repository head

    Type:     git
    Location: https://github.com/input-output-hk/ouroboros-spec.git
    Branch:   master
    Subdir:   Haskell/polynomials

Library

    Exposed-Modules: Data.Polynomial
                     Data.Polynomial.Charts
                     Data.Polynomial.Class
                     Data.Polynomial.Discrete
                     Data.Polynomial.Mixed
                     Data.Polynomial.Piecewise
                     Data.Polynomial.Piecewise.Test

    Build-Depends: base                >= 4.10 && < 5,
                   Chart              ^>= 1.9,
                   Chart-cairo        ^>= 1.9,
                   colour,
                   containers         ^>= 0.5,
                   data-default-class ^>= 0.1,
                   lens               ^>= 4.16,
                   prettyclass        ^>= 1.0,
                   QuickCheck,
                   toysolver
    HS-Source-Dirs: src

    Default-Language: Haskell2010

    GHC-Options: -Wall
